deploy/k8s-deployment-redisfe.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisfe
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: redisfe
  template:
    metadata:
      labels:
        app: redisfe
    spec:
      containers:
        - name: redisfe
          image: registry.hub.docker.com/idanatias/redis-fe:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 7042
          livenessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 120
            timeoutSeconds: 5
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 5
          readinessProbe:
            httpGet:
              path: /healthz
              port: http
            initialDelaySeconds: 120
            timeoutSeconds: 5
            periodSeconds: 60
            successThreshold: 1
            failureThreshold: 5
