deploy/k8s-service-redis.yaml
apiVersion: v1
kind: Service
metadata:
    name: redis
spec:
    ports:
        - port: 6379
          name: peer
    clusterIP: None # we need a "headless" service to manage our DNS entries for the StatefulSet
    selector:
        app: redis
