deploy/k8s-ingress-redisfe.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: redisfe-ingress
spec:
  backend:
    serviceName: redisfe
    servicePort: 7042
